packages/compiler-rs/tests/snapshots/transform_text__escapes_raw_static_text_when_generating_the_template_string.snap
---
source: tests/transform_text.rs
expression: code
---
import { template as _template } from "vue";
const t0 = _template("<code>&lt;script&gt;</code>", true);
(() => {
  const n0 = t0();
  return n0;
})();
