packages/compiler-rs/tests/snapshots/transform_text__expression_logical.snap
---
source: tests/transform_text.rs
expression: code
---
import { setNodes as _setNodes, createNodes as _createNodes } from "vue-jsx-vapor";
import { child as _child, createIf as _createIf, template as _template } from "vue";
const t0 = _template("<div> </div>");
(() => {
  const n0 = _createIf(() => ok, () => {
    const n2 = t0();
    const x2 = _child(n2);
    _setNodes(x2, () => msg);
    return n2;
  }, () => {
    const n4 = _createNodes(() => ok);
    return n4;
  });
  return n0;
})();
