packages/compiler-rs/tests/snapshots/transform_text__interpolation.snap
---
source: tests/transform_text.rs
expression: code
---
import { createNodes as _createNodes } from "vue-jsx-vapor";
(() => {
  const n0 = _createNodes(1, 2, () => a + b + c);
  return n0;
})();
